--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,14 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath "io.realm:realm-gradle-plugin:10.11.1"
+    }
+}
+
 plugins {
-id 'com.android.application' version '8.1.0' apply false
+    id 'com.android.application' version '8.1.0' apply false
     id 'org.jetbrains.kotlin.android' version '1.8.10' apply false
+    id "org.jetbrains.kotlin.kapt" version "1.6.20" apply false
 }
