--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,7 @@
-buildscript {
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath "io.realm:realm-gradle-plugin:10.15.1"
-    }
-}
 
 plugins {
     id 'com.android.application' version '8.1.0' apply false
     id 'org.jetbrains.kotlin.android' version '1.8.10' apply false
+    id 'io.realm.kotlin' version '1.10.0' apply false
     id "org.jetbrains.kotlin.kapt" version "1.6.20" apply false
 }
