--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,9 @@ dependencies {
     def lifecycle_version = "2.6.1"
     def ktor_version = "1.5.0"
 
+    //swipe to reveal
+    implementation 'de.charlex.compose:revealswipe:1.0.0'
+
     //kotlinx serialization
     implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.5.1")
 
